fixed issue 37230. Fix java9 deprecation warnings.
Avoid constructors deprecated in java9. When fixing apply the following rules:
- The following applies to new Long, new Integer, new Boolean, ... equally
- new Long(20) -> 20L when needing Long object
  just use long literal auto-boxing will auto-convert to Long
- Long l = new Long(String) -> Long.valueOf
- long l = new Long(String) -> Long.parseLong
- sometimes code did new Long(...).longValue
  Replace that by directly using parseLong to return primitive instead
- in ReportingUtils.java instead of defining double constant and using it for
  only new Float -> change constant to be directly float instead

--HG--
extra : rebase_source : 48e6a7d9c7bb24b236e989fc590969017c85f4d7